Added Controllers in application

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Core.BookStore/.vs/Core.BookStore
 /Core.BookStore/Core.BookStore/obj
 /Core.BookStore/Core.BookStore/bin/Debug/net6.0
+/Core.BookStore/.vs/ProjectEvaluation
