--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Core.BookStore/Core.BookStore/obj
 /Core.BookStore/Core.BookStore/bin/Debug/net6.0
 /Core.BookStore/.vs/ProjectEvaluation
+/Core.BookStore/Core.BookStore/wwwroot/lib
