_Layout,Viewstart And Viewimports and View Bag functionality is added

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Core.BookStore/Core.BookStore/bin/Debug/net6.0
 /Core.BookStore/.vs/ProjectEvaluation
 /Core.BookStore/Core.BookStore/wwwroot/lib
+/Core.BookStore/Core.BookStore/bin/Release/net6.0
