--- a/Core.BookStore/Core.BookStore/appsettings.json
+++ b/Core.BookStore/Core.BookStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "conn": "Server=.;DataBase=BookStore;Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
