Appsetting reader functionality is added

--- a/Core.BookStore/Core.BookStore/appsettings.Development.json
+++ b/Core.BookStore/Core.BookStore/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppName": "Book store app from dev json file",
+  "infoObj": {
+    "key1": "Key1 value dev",
+    "Key2": "Key2 value dev",
+    "key3": {
+      "key3obj": "key3 obj1 value dev"
+    }
   }
 }
