--- a/Core.BookStore/Core.BookStore/appsettings.Production.json
+++ b/Core.BookStore/Core.BookStore/appsettings.Production.json
@@ -6,15 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "conn": "Server=.;DataBase=BookStore;Integrated Security=true"
+    "default": "Test Connection string"
   },
-  "AppName": "Book Store App Updated",
   "infoObj": {
-    "key1": "Key1 value",
-    "Key2": "Key2 value",
+    "key1": "Key1 value prod",
+    "Key2": "Key2 value prod",
     "key3": {
-      "key3obj": "key3 obj1 value"
-    } 
+      "key3obj": "key3 obj1 value prod"
+    }
   },
   "AllowedHosts": "*"
 }
